--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <h3 class="intro__author">— Joseph Beuys</h3>
         <p class="intro__text">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
       </section>
-      <div class="photo-grid">
-        <img class="photo-grid__img" src="./assets/images/__itemland1.jpg" alt="Imagem de uma praia em um dia nublado.">
-        <img class="photo-grid__img" src="./assets/images/__itemland2.jpg" alt="Imagem de uma cidade na beira da praia.">
-        <img class="photo-grid__img" src="./assets/images/__itemland3.jpg" alt="Imagem do topo de uma igreja.">
-        <img class="photo-grid__img" src="./assets/images/__itemland4.jpg" alt="Imagem da ponte de uma cidade urbana.">
-        <img class="photo-grid__img" src="./assets/images/__itemland5.jpg" alt="Imagem de um campo de grama verde com uma casa de fundo.">
-        <img class="photo-grid__img" src="./assets/images/__itemland6.jpg" alt="Imagem de uma placa com aviso de área verde.">
-        <img class="photo-grid__img" src="./assets/images/__itemland7.jpg" alt=" Imagem de um homem em frente a uma Oca indígena.">
-        <img class="photo-grid__img" src="./assets/images/__itemland8.jpg" alt="Imagem de algumas casas pero de um barranco.">
-      </div>
+      <ul class="photo-grid">
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__dia-nublado.jpg" alt="Imagem de uma praia em um dia nublado."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__beira-da-praia.jpg" alt="Imagem de uma cidade na beira da praia."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__igreja.jpg" alt="Imagem do topo de uma igreja."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__cidade-urbana.jpg" alt="Imagem da ponte de uma cidade urbana."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__casa-de-fundo.jpg" alt="Imagem de um campo de grama verde com uma casa de fundo."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__area-verde.jpg" alt="Imagem de uma placa com aviso de área verde."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__oca-indigena.jpg" alt=" Imagem de um homem em frente a uma Oca indígena."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__barranco.jpg" alt="Imagem de algumas casas pero de um barranco."></li>
+      </ul>
 
       <section class="place">
         <div class="place__container">
@@ -122,9 +122,9 @@
         </div>
       </section>
 
-      <div class="footer">
+      <footer class="footer">
         <p class="footer__registration">© 2023. Bruno Carletti Duarte</p>
-      </div>
+      </footer>
     </main>
   </div>
 </body>
