updated refer links

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <p class="intro__text">A cidade de Practicum reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte Practicum tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.</p>
       </section>
       <ul class="photo-grid">
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__dia-nublado.jpg" alt="Imagem de uma praia em um dia nublado."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__beira-da-praia.jpg" alt="Imagem de uma cidade na beira da praia."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__igreja.jpg" alt="Imagem do topo de uma igreja."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__cidade-urbana.jpg" alt="Imagem da ponte de uma cidade urbana."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__casa-de-fundo.jpg" alt="Imagem de um campo de grama verde com uma casa de fundo."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__area-verde.jpg" alt="Imagem de uma placa com aviso de área verde."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__oca-indigena.jpg" alt=" Imagem de um homem em frente a uma Oca indígena."></li>
-        <li class="photo-grid__item"><img class="photo-grid__img" src="./assets/images/__barranco.jpg" alt="Imagem de algumas casas pero de um barranco."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__dia-nublado.jpg" alt="Imagem de uma praia em um dia nublado."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__beira-da-praia.jpg" alt="Imagem de uma cidade na beira da praia."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__igreja.jpg" alt="Imagem do topo de uma igreja."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__cidade-urbana.jpg" alt="Imagem da ponte de uma cidade urbana."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__casa-de-fundo.jpg" alt="Imagem de um campo de grama verde com uma casa de fundo."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__area-verde.jpg" alt="Imagem de uma placa com aviso de área verde."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__oca-indigena.jpg" alt=" Imagem de um homem em frente a uma Oca indígena."></li>
+        <li class="photo-grid__item"><img class="photo-grid__img" src="assets/images/__barranco.jpg" alt="Imagem de algumas casas pero de um barranco."></li>
       </ul>
 
       <section class="place">
@@ -42,7 +42,7 @@
               <h3 class="place__artist">Artista</h3>
               <p class="place__artist-name">Natalia Dolgushina, produtora de conteúdo</p>
             </div>
-            <img class="place__image" src="./assets/images/__imagekiev.jpg" alt="Imagem de Kiev, Ucrânia">
+            <img class="place__image" src="assets/images/__imagekiev.jpg" alt="Imagem de Kiev, Ucrânia">
             <div class="place__paragraphs">
               <p class="place__paragraph">Kyev (ou Kiev), capital da Ucrânia, é uma grande cidade localizada às margens do rio Dnipro. É claro que ninguém em sã consciência nadaria no rio, a menos que tenha crescido lá, e nesse caso provavelmente já tentou em algum momento. Os verões são quentes aqui e os invernos são frios, mas o outono e a primavera são absolutamente incríveis.</p>
               <p class="place__paragraph place__paragraph_small-space">A cidade em si é uma mistura de arquitetura pré-revolução, pós-guerra e soviética, toda ela salpicada de varandas modificadas. Se estiver na margem direita do Dnipro, a paisagem é difícil de percorrer para quem anda de bicicleta e quem usa salto. A margem esquerda é considerada muito menos interessante e prestigiosa, mesmo por pessoas que vivem na periferia da margem direita.</p>
@@ -57,7 +57,7 @@
               <p class="place__artist-name place__artist-name_no-margin-bottom">Steffan Warren, editor-chefe</p>
               <p class="place__artist-name">Kseniya Glagoleva, gerente de projeto</p>
             </div>
-            <img class="place__image" src="./assets/images/__imagecriccieth.jpg" alt="Imagem de Criccieth, País de Gales">
+            <img class="place__image" src="assets/images/__imagecriccieth.jpg" alt="Imagem de Criccieth, País de Gales">
             <div class="place__paragraphs">
               <p class="place__paragraph">A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p>
               <p class="place__paragraph place__paragraph_small-space">A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do Reino Unido.</p>
@@ -71,7 +71,7 @@
               <h3 class="place__artist">Artista</h3>
               <p class="place__artist-name">Travis Turner, autor e editor</p>
             </div>
-            <img class="place__image" src="./assets/images/__imageberea.jpg" alt="Imagem de Berea, EUA">
+            <img class="place__image" src="assets/images/__imageberea.jpg" alt="Imagem de Berea, EUA">
             <div class="place__paragraphs">
               <p class="place__paragraph">Berea é uma pequena cidade localizada na parte central do Kentucky. A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado, e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas, artigos de madeira, galerias, ateliês de vidro e muito mais. A cidade realiza um festival anual que celebra o "pão de colher", um prato local feito com pão de milho e servido com uma colher de pau.</p>
               <p class="place__paragraph place__paragraph_small-space">No entanto, provavelmente é mais conhecido pela faculdade local. O Berea College foi fundado em 1855 e foi o primeiro colégio no sul a ser racialmente integrado, bem como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe uma bolsa de estudos integral.</p>
@@ -85,7 +85,7 @@
               <h3 class="place__artist">Artista</h3>
               <p class="place__artist-name">Grevisse Kenguruka, editor técnico</p>
             </div>
-            <img class="place__image" src="./assets/images/__imagemuramvya.jpg" alt="Imagem de Muramvya, Burundi">
+            <img class="place__image" src="assets/images/__imagemuramvya.jpg" alt="Imagem de Muramvya, Burundi">
             <div class="place__paragraphs">
               <p class="place__paragraph">Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.</p>
               <p class="place__paragraph place__paragraph_small-space">O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do Burundi.</p>
@@ -99,7 +99,7 @@
               <h3 class="place__artist">Artista</h3>
               <p class="place__artist-name">Bruno Carletti, Desenvolvedor Web</p>
             </div>
-            <img class="place__image" src="./assets/images/__imagelimerick.jpg" alt="Imagem de Limerick, Ireland">
+            <img class="place__image" src="assets/images/__imagelimerick.jpg" alt="Imagem de Limerick, Ireland">
             <div class="place__paragraphs">
               <p class="place__paragraph ">Limerick, localizada na costa oeste da Irlanda, é uma cidade vibrante e encantadora com uma rica história e cultura. Situada às margens do majestoso Rio Shannon, Limerick é a terceira maior cidade da Irlanda e possui uma atmosfera acolhedora que cativa os visitantes.</p>
               <p class="place__paragraph place__paragraph_small-space">Conhecida por seus antigos castelos, ruas de paralelepípedos e uma herança literária inspiradora, Limerick oferece uma mistura única de tradição e modernidade. O Castelo de King John, uma das principais atrações da cidade, é uma fortaleza medieval imponente que oferece uma visão fascinante da história local.</p>
@@ -111,7 +111,7 @@
 
       <section class="cover">
         <div class="cover__container">
-          <img class="cover__image" src="./assets/images/__backgroundvisit.jpg" alt="Imagem de um campo vasto com grama verde">
+          <img class="cover__image" src="assets/images/__backgroundvisit.jpg" alt="Imagem de um campo vasto com grama verde">
           <div class="cover__overlay">
             <h2 class="cover__title">Visite-nos</h2>
             <p class="cover__text">Durante todo o ano<span class="cover__line-breaker">
